# MonATM

./: .env  .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust-ci.yml
src/: controller.rs  main.rs
src/auth/: card_reader.rs  mod.rs  secure_auth.rs
src/crypto/: client.rs  mod.rs  oracle.rs  wallet.rs
src/hardware/: cash_dispenser.rs  deposit_vault.rs  input_periph.rs  mod.rs
src/models/: account.rs  card.rs  ledger.rs  mod.rs
src/states/: crypto_qr.rs  crypto_wait.rs  idle.rs  mod.rs  pin_entry.rs  tx_select.rs
src/transactions/: balance.rs  balance.rs⁠  crypto_offramp.rs  deposit.rs  lending.rs  mod.rs  withdrawal.rs
tests/: state_transition_tests.rs  transactional_race_tests.rs
⁠tests/: state_transition_tests.rs
